# tortella

./: GenerateMakefile.md  ProjectHome.md
TorTella/: .cproject  .project  .tm_project2.cache  Makefile  autogen.sh  configure.ac
TorTella/docs/: Relazione Ingegneria Del Web.odt
TorTella/docs/documentation/man/man3/: SocketTest.c.3  bye_desc.3  chat.3  chatclient.3  common.h.3  controller.h.3  datamanager.h.3  http_header_response.3  httpmanager.c.3  httpmanager.h.3  init.h.3  init_testing.c.3  list_desc.3  listhits_desc.3  packetmanager.h.3  pm_data.3  route_entry.3  routemanager.c.3  routemanager.h.3  servent.h.3  servent_data.3  socketmanager.c.3  socketmanager.h.3  supernodedata_testing.c.3  tortella.c.3  tortella_packet.3  tortellaprotocol.c.3  tortellaprotocol_testing.c.3  tree_model.3  utils.c.3
TorTella/docs/relazione/: relazione.tex  relazione_appendice.tex  title.tex
TorTella/docs/relazione/cap/: abstract.tex  ambienteDiSviluppo.tex  appendice.tex  architettura.tex  conclusioni.tex  init.tex  installazioneEdEsecuzione.tex  introduzione.tex  tortellaApplication.tex
TorTella/docs/relazione/etc/src/: confmanager.c  controller.c  datamanager.c  datamanager.h  logger.c  servent.c  servent.h  socketmanager.c  socketmanager.h  tortella.c  utils.c  utils.h
TorTella/docs/slides/Lorenzo Tavernese/: slides.tex
TorTella/docs/slides/Simone Notargiacomo/: slides.tex
TorTella/src/: HttpManager.c  HttpManager.h  Makefile  Makefile.am  common.h  confmanager.c  confmanager.h  controller.c  controller.h  datamanager.c  datamanager.h  gui.c  gui.h  hex.c  httpmanager.c  httpmanager.h  init.c  init.h  list.c  logger.c  logger.h  packetmanager.c  packetmanager.h  routemanager.c  routemanager.h  servent.c  servent.h  socketmanager.c  socketmanager.h  supernodedata.c  supernodedata.h  tortella  tortella.c  tortellaprotocol.c  tortellaprotocol.h  utils.c  utils.h
TorTella/src/conf/: tortella.conf  tortella1.conf  tortella2.conf
TorTella/src/data/: 112
TorTella/src/documentation/man/man3/: bye_desc.3  chat.3  common.h.3  confmanager.c.3  confmanager.h.3  controller.c.3  controller.h.3  datamanager.h.3  http_header_response.3  httpmanager.c.3  init.c.3  join_desc.3  list_testing.c.3  listhits_desc.3  logger.c.3  logger.h.3  message_desc.3  packetmanager.c.3  packetmanager.h.3  ping_desc.3  route_entry.3  routemanager.c.3  search_desc.3  servent.c.3  servent.h.3  servent_data.3  servent_testing.c.3  socketmanager.c.3  tortella.c.3  tortella_header.3  tortellaprotocol.c.3  tortellaprotocol_testing.c.3  tree_model.3  utils.c.3  utils.h.3
TorTella/src/testing/: SocketTest.c  confmanager_testing.c  controller_testing.c  gui_testing.c  httpmanager_testing  httpmanager_testing.c  list_testing.c  servent_testing  servent_testing.c  socketmanager_testing  socketmanager_testing.c  supernodedata_testing  supernodedata_testing.c  tortellaprotocol_testing  tortellaprotocol_testing.c
trunk/TorTella/: .cproject  .project  .tm_project2.cache  Makefile  configure.ac
trunk/TorTella/docs/: Relazione Ingegneria Del Web.odt  doxygen.conf
trunk/TorTella/docs/documentation/man/man3/: confmanager.c.3  confmanager.h.3  confmanager_testing.c.3  controller.c.3  controller_testing.c.3  datamanager.c.3  gui.c.3  gui.h.3  gui_testing.c.3  http_header_request.3  http_packet.3  httpmanager_testing.c.3  init.c.3  init_data.3  join_desc.3  leave_desc.3  list_testing.c.3  logger.c.3  logger.h.3  message_desc.3  packetmanager.c.3  ping_desc.3  search_desc.3  searchhits_desc.3  servent.c.3  servent_testing.c.3  socketmanager_testing.c.3  tortella_header.3  tortellaprotocol.h.3  utils.h.3
trunk/TorTella/docs/relazione/: compile.sh  layout.tex  relazione.tex  relazione_senzagrigio.tex  title.tex  title_appendice.tex
trunk/TorTella/docs/relazione/cap/: abstract.tex  ambienteDiSviluppo.tex  appendice.tex  architettura.tex  conclusioni.tex  gnutellaVsTortella.tex  installazioneEdEsecuzione.tex  introduzione.tex  tortellaApplication.tex
trunk/TorTella/docs/relazione/etc/src/: common.h  confmanager.h  gui.c  gui.h  httpmanager.c  httpmanager.h  init.c  init.h  logger.h  packetmanager.c  packetmanager.h  routemanager.c  routemanager.h  tortellaprotocol.c  tortellaprotocol.h
trunk/TorTella/docs/slides/Ibrahim Khalili/: slides.tex
trunk/TorTella/docs/slides/Ibrahim Khalili/etc/: architectural_overview.odg
trunk/TorTella/docs/slides/Lorenzo Tavernese/: slides.tex
trunk/TorTella/docs/slides/Simone Notargiacomo/: slides.tex
trunk/TorTella/src/: GnutellaProtocol.c  GnutellaProtocol.h  Makefile  Makefile.am  SocketManager.h  chatserver.h  common.h  confmanager.c  confmanager.h  controller.c  controller.h  datamanager.c  datamanager.h  gui.c  gui.h  httpmanager.c  httpmanager.h  init.c  init.h  list.c  list.h  logger.c  logger.h  packetmanager.c  packetmanager.h  routemanager.c  routemanager.h  servent.c  servent.h  socketmanager.c  socketmanager.h  supernodedata.c  supernodedata.h  test  test.c  test.h  tortella  tortella.c  tortellaprotocol.c  tortellaprotocol.h  (+2 more)
trunk/TorTella/src/conf/: tortella.conf  tortella1.conf  tortella2.conf
trunk/TorTella/src/data/: 111  init_data
trunk/TorTella/src/documentation/man/man3/: SocketTest.c.3  chatclient.3  confmanager_testing.c.3  controller_testing.c.3  datamanager.c.3  gui.c.3  gui.h.3  gui_testing.c.3  http_header_request.3  http_packet.3  httpmanager.h.3  httpmanager_testing.c.3  init.h.3  init_data.3  init_testing.c.3  leave_desc.3  list_desc.3  pm_data.3  routemanager.h.3  searchhits_desc.3  socketmanager.h.3  socketmanager_testing.c.3  supernodedata_testing.c.3  tortella_packet.3  tortellaprotocol.h.3
trunk/TorTella/src/testing/: confmanager_testing.c  controller_testing.c  gui_testing.c  httpmanager_testing  init_testing.c  servent_testing  servent_testing.c  socketmanager_testing  socketmanager_testing.c  supernodedata_testing  supernodedata_testing.c  testing  tortellaprotocol_testing  tortellaprotocol_testing.c
wiki/: GenerateMakefile.wiki
